tests/snapshots/cli__rust_happy_path.snap
---
source: tests/cli.rs
expression: check(stringify! (rust_happy_path))
---
exit: 0
checked 7 files -- no violations
