tests/snapshots/cli__rust_private_only.snap
---
source: tests/cli.rs
expression: check(stringify! (rust_private_only))
---
exit: 0
checked 1 file -- no violations
