tests/snapshots/cli__src_layout.snap
---
source: tests/cli.rs
expression: check(stringify! (src_layout))
---
exit: 1
error[folder]: no pattern matched
  --> src/my_package/features/auth/functions/login.py
      src/my_package/features/auth/functions/logout.py
      src/my_package/features/auth/functions/refresh.py
      src/my_package/features/auth/types/credentials.py
   |
   | `my_package` is not allowed as {folder1}
   | expected one of: app, features, pages, shared
   |
   = tried: {root}/{folder1}/{folder2}/{folder3}/{kind}/{files}
            {root}/{folder1}/{folder2}/{kind}/{files}
            {root}/{folder1}/{kind}/{files}

checked 4 files -- 4 violations
