tests/snapshots/cli__too_many_lines.snap
---
source: tests/cli.rs
expression: check(stringify! (too_many_lines))
---
exit: 1
error[size]: 208 lines of code, and the budget is 200
  --> src/features/auth/authenticate.py
   |
   | blank lines and comments are not counted
   |
   = pull a private helper out into its own file, or split the export in two

checked 1 file -- 1 violation
