tests/snapshots/cli__topic_file.snap
---
source: tests/cli.rs
expression: check(stringify! (topic_file))
---
exit: 0
checked 1 file -- no violations
