tests/snapshots/cli__two_governed_exports.snap
---
source: tests/cli.rs
expression: check(stringify! (two_governed_exports))
---
exit: 1
error[content]: file exports 2 substantial things, expected 1
  --> src/features/auth/authenticate.py:5
   |
   | exports: def authenticate, def validate_token
   | move all but one to files of their own, or make them private

checked 1 file -- 1 violation
